# kbd-trainer

./: .gitignore  CMakeLists.txt  README.md
include/: game.h  input.h  render.h
src/: game.c  input.c  main.c  render.c
